tests/baselines/reference/crashInsourcePropertyIsRelatableToTargetProperty.errors.txt
crashInsourcePropertyIsRelatableToTargetProperty.ts line 5 col 1: error TS2154: Specialized overload signature is not subtype of any non-specialized signature.
crashInsourcePropertyIsRelatableToTargetProperty.ts line 9 col 5: error TS2012: Cannot convert 'typeof foo' to 'D':
	Type 'typeof foo' is missing property 'x' from type 'D'.